<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/login_main_view"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/lbg"
              android:focusable="true"
              android:focusableInTouchMode="true"
              android:orientation="vertical"
              tools:context=".LoginActivity" >
    <LinearLayout
        android:background="@color/greenBg"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="登录酷校"
            android:textColor="@color/whiteBg"
            android:textSize="25sp" />
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_student"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:paddingRight="1dp"
        android:background="@drawable/sso_usrbg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/sso_usr" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@color/whiteBg"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/usrHint"
                android:maxLength="50"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/usrmidpwd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:paddingRight="1dp"
        android:background="@drawable/sso_pwdbg" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/sso_pwd" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:background="@color/whiteBg"
                android:ems="10"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/pwdHint"
                android:inputType="textPassword"
                android:maxLength="40"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="@color/edittext_hint_color"
                android:textCursorDrawable="@null"
                android:textSize="16sp" >
            </EditText>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btnselector"
        android:text="@string/loginBtn"
        android:textColor="@color/whiteBg"
        android:textSize="23sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <RelativeLayout
            android:layout_width="130dp"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:text="@string/register"
                android:textColor="@color/regcolor"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="10dp"
                android:text="@string/forgetPwd"
                android:textColor="@color/regcolor"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="36dp" >
        <TextView
            android:visibility="gone"
            android:id="@+id/tv_see_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/firstSee"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>